tests/NormalTests/paczka1/small_fuzzy/93694176.err
Error in line 9: Ttc S707 12,9
Error in line 14: VAZyIwj S707 55,9
